@@ -1,5 +1,7 @@
 package io.github.alien.roseau.extractors.spoon;
 
+import io.github.alien.roseau.Library;
+import io.github.alien.roseau.RoseauException;
 import io.github.alien.roseau.api.model.AccessModifier;
 import io.github.alien.roseau.api.model.Annotation;
 import io.github.alien.roseau.api.model.AnnotationDecl;
@@ -7,25 +9,25 @@ import io.github.alien.roseau.api.model.AnnotationMethodDecl;
 import io.github.alien.roseau.api.model.ClassDecl;
 import io.github.alien.roseau.api.model.ConstructorDecl;
 import io.github.alien.roseau.api.model.EnumDecl;
-import io.github.alien.roseau.api.model.EnumValueDecl;
 import io.github.alien.roseau.api.model.FieldDecl;
 import io.github.alien.roseau.api.model.FormalTypeParameter;
 import io.github.alien.roseau.api.model.InterfaceDecl;
 import io.github.alien.roseau.api.model.MethodDecl;
 import io.github.alien.roseau.api.model.Modifier;
+import io.github.alien.roseau.api.model.ModuleDecl;
 import io.github.alien.roseau.api.model.ParameterDecl;
-import io.github.alien.roseau.api.model.RecordComponentDecl;
 import io.github.alien.roseau.api.model.RecordDecl;
 import io.github.alien.roseau.api.model.SourceLocation;
 import io.github.alien.roseau.api.model.TypeDecl;
+import io.github.alien.roseau.api.model.factory.ApiFactory;
 import io.github.alien.roseau.api.model.reference.ITypeReference;
 import io.github.alien.roseau.api.model.reference.TypeReference;
-import io.github.alien.roseau.api.model.reference.TypeReferenceFactory;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import spoon.Launcher;
 import spoon.reflect.code.CtExpression;
 import spoon.reflect.code.CtFieldRead;
+import spoon.reflect.code.CtLiteral;
 import spoon.reflect.code.CtNewArray;
 import spoon.reflect.cu.SourcePosition;
 import spoon.reflect.declaration.CtAnnotation;
@@ -35,17 +37,17 @@ import spoon.reflect.declaration.CtClass;
 import spoon.reflect.declaration.CtConstructor;
 import spoon.reflect.declaration.CtElement;
 import spoon.reflect.declaration.CtEnum;
-import spoon.reflect.declaration.CtEnumValue;
 import spoon.reflect.declaration.CtExecutable;
 import spoon.reflect.declaration.CtField;
 import spoon.reflect.declaration.CtFormalTypeDeclarer;
 import spoon.reflect.declaration.CtInterface;
 import spoon.reflect.declaration.CtMethod;
 import spoon.reflect.declaration.CtModifiable;
+import spoon.reflect.declaration.CtModule;
 import spoon.reflect.declaration.CtNamedElement;
+import spoon.reflect.declaration.CtPackageExport;
 import spoon.reflect.declaration.CtParameter;
 import spoon.reflect.declaration.CtRecord;
-import spoon.reflect.declaration.CtRecordComponent;
 import spoon.reflect.declaration.CtSealable;
 import spoon.reflect.declaration.CtType;
 import spoon.reflect.declaration.CtTypeMember;
@@ -54,13 +56,16 @@ import spoon.reflect.declaration.ModifierKind;
 import spoon.reflect.factory.Factory;
 import spoon.reflect.factory.TypeFactory;
 import spoon.reflect.reference.CtArrayTypeReference;
+import spoon.reflect.reference.CtFieldReference;
 import spoon.reflect.reference.CtIntersectionTypeReference;
+import spoon.reflect.reference.CtPackageReference;
 import spoon.reflect.reference.CtTypeParameterReference;
 import spoon.reflect.reference.CtTypeReference;
 import spoon.reflect.reference.CtWildcardReference;
 
 import java.io.File;
 import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
 import java.lang.annotation.Target;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -68,36 +73,37 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
- * A factory of {@link TypeDecl} and {@link TypeReference} instances using Spoon. For internal use only.
+ * A factory of {@link TypeDecl} and {@link TypeReference} instances using Spoon.
  */
-public class SpoonAPIFactory {
+public class SpoonApiFactory {
 	private final TypeFactory typeFactory;
-	private final TypeReferenceFactory typeReferenceFactory;
+	private final ApiFactory factory;
+	private final Path basePath;
 
-	private static final Logger LOGGER = LogManager.getLogger(SpoonAPIFactory.class);
+	private static final Logger LOGGER = LogManager.getLogger(SpoonApiFactory.class);
 
-	public SpoonAPIFactory(TypeReferenceFactory typeReferenceFactory, List<Path> classpath) {
+	public SpoonApiFactory(Library library, ApiFactory factory) {
 		Factory spoonFactory = new Launcher().createFactory();
 		spoonFactory.getEnvironment().setSourceClasspath(
-			sanitizeClasspath(classpath).stream()
+			sanitizeClasspath(library.getClasspath()).stream()
 				.map(p -> p.toAbsolutePath().toString())
 				.toArray(String[]::new));
+		SpoonUtils.setupEnvironment(spoonFactory.getEnvironment());
 		this.typeFactory = spoonFactory.Type();
-		this.typeReferenceFactory = typeReferenceFactory;
-	}
-
-	public TypeReferenceFactory getTypeReferenceFactory() {
-		return typeReferenceFactory;
+		this.factory = factory;
+		this.basePath = library.getLocation();
 	}
 
 	// Avoid having Spoon throwing at us due to "invalid" classpath
-	private List<Path> sanitizeClasspath(List<Path> classpath) {
+	private List<Path> sanitizeClasspath(Set<Path> classpath) {
 		return classpath.stream()
 			.map(Path::toFile)
 			.filter(File::exists)
@@ -109,23 +115,23 @@ public class SpoonAPIFactory {
 	private ITypeReference createITypeReference(CtTypeReference<?> typeRef) {
 		return switch (typeRef) {
 			case CtArrayTypeReference<?> arrayRef ->
-				typeReferenceFactory.createArrayTypeReference(createITypeReference(arrayRef.getArrayType()),
+				factory.references().createArrayTypeReference(createITypeReference(arrayRef.getArrayType()),
 					arrayRef.getDimensionCount());
 			case CtWildcardReference wcRef ->
-				typeReferenceFactory.createWildcardTypeReference(convertCtTypeParameterBounds(wcRef.getBoundingType()),
+				factory.references().createWildcardTypeReference(convertCtTypeParameterBounds(wcRef.getBoundingType()),
 					wcRef.isUpper());
 			case CtTypeParameterReference tpRef ->
-				typeReferenceFactory.createTypeParameterReference(tpRef.getQualifiedName());
+				factory.references().createTypeParameterReference(tpRef.getQualifiedName());
 			case CtTypeReference<?> ref when ref.isPrimitive() ->
-				typeReferenceFactory.createPrimitiveTypeReference(ref.getQualifiedName());
+				factory.references().createPrimitiveTypeReference(ref.getQualifiedName());
 			default -> createTypeReference(typeRef);
 		};
 	}
 
 	private <T extends TypeDecl> TypeReference<T> createTypeReference(CtTypeReference<?> typeRef) {
 		return typeRef != null
-			? typeReferenceFactory.createTypeReference(typeRef.getQualifiedName(),
-			createITypeReferences(typeRef.getActualTypeArguments()))
+			? factory.references().createTypeReference(typeRef.getQualifiedName(),
+			createITypeReferencesList(typeRef.getActualTypeArguments()))
 			: null;
 	}
 
@@ -133,18 +139,36 @@ public class SpoonAPIFactory {
 		return type != null ? createTypeReference(type.getReference()) : null;
 	}
 
-	private List<ITypeReference> createITypeReferences(Collection<CtTypeReference<?>> typeRefs) {
+	private Set<ITypeReference> createITypeReferences(Collection<CtTypeReference<?>> typeRefs) {
+		return typeRefs.stream()
+			.map(this::createITypeReference)
+			.filter(Objects::nonNull)
+			.collect(Collectors.toUnmodifiableSet());
+	}
+
+	private List<ITypeReference> createITypeReferencesList(Collection<CtTypeReference<?>> typeRefs) {
 		return typeRefs.stream()
 			.map(this::createITypeReference)
 			.filter(Objects::nonNull)
 			.toList();
 	}
 
-	private <T extends TypeDecl> List<TypeReference<T>> createTypeReferences(Collection<CtTypeReference<?>> typeRefs) {
+	private <T extends TypeDecl> Set<TypeReference<T>> createTypeReferences(Collection<CtTypeReference<?>> typeRefs) {
 		return typeRefs.stream()
 			.map(this::<T>createTypeReference)
 			.filter(Objects::nonNull)
-			.toList();
+			.collect(Collectors.toUnmodifiableSet());
+	}
+
+	public ModuleDecl convertCtModule(CtModule module) {
+		return factory.createModule(
+			module.getSimpleName(),
+			module.getExportedPackages().stream()
+				// qualified exports (`exports pkg to m`) are not considered exported
+				.filter(pkg -> pkg.getTargetExport().isEmpty())
+				.map(CtPackageExport::getPackageReference)
+				.map(CtPackageReference::getQualifiedName)
+				.collect(Collectors.toUnmodifiableSet()));
 	}
 
 	public TypeDecl convertCtType(CtType<?> type) {
@@ -154,7 +178,7 @@ public class SpoonAPIFactory {
 			case CtRecord r -> convertCtRecord(r);
 			case CtEnum<?> e -> convertCtEnum(e);
 			case CtClass<?> c -> convertCtClass(c);
-			default -> throw new IllegalArgumentException("Unknown type kind: " + type);
+			default -> throw new RoseauException("Unexpected type kind: " + type);
 		};
 	}
 
@@ -163,14 +187,14 @@ public class SpoonAPIFactory {
 		// Spoon's null newShadowClass thingy
 		try {
 			return ref.getTypeDeclaration() != null ? convertCtType(ref.getTypeDeclaration()) : null;
-		} catch (Exception e) {
+		} catch (RuntimeException e) {
 			LOGGER.warn("Couldn't convert {}", qualifiedName, e);
 			return null;
 		}
 	}
 
 	private ClassDecl convertCtClass(CtClass<?> cls) {
-		return new ClassDecl(
+		return factory.createClass(
 			cls.getQualifiedName(),
 			convertSpoonVisibility(cls.getVisibility()),
 			convertSpoonNonAccessModifiers(cls.getModifiers()),
@@ -188,7 +212,7 @@ public class SpoonAPIFactory {
 	}
 
 	private InterfaceDecl convertCtInterface(CtInterface<?> intf) {
-		return new InterfaceDecl(
+		return factory.createInterface(
 			intf.getQualifiedName(),
 			convertSpoonVisibility(intf.getVisibility()),
 			convertSpoonNonAccessModifiers(intf.getModifiers()),
@@ -204,7 +228,7 @@ public class SpoonAPIFactory {
 	}
 
 	private AnnotationDecl convertCtAnnotationType(CtAnnotationType<?> annotation) {
-		return new AnnotationDecl(
+		return factory.createAnnotation(
 			annotation.getQualifiedName(),
 			convertSpoonVisibility(annotation.getVisibility()),
 			convertSpoonNonAccessModifiers(annotation.getModifiers()),
@@ -218,7 +242,7 @@ public class SpoonAPIFactory {
 	}
 
 	private EnumDecl convertCtEnum(CtEnum<?> enm) {
-		return new EnumDecl(
+		return factory.createEnum(
 			enm.getQualifiedName(),
 			convertSpoonVisibility(enm.getVisibility()),
 			convertSpoonNonAccessModifiers(enm.getModifiers()),
@@ -228,13 +252,12 @@ public class SpoonAPIFactory {
 			convertCtFields(enm),
 			convertCtMethods(enm),
 			createTypeReference(enm.getDeclaringType()),
-			convertCtConstructors(enm),
-			convertCtEnumValues(enm)
+			convertCtConstructors(enm)
 		);
 	}
 
 	private RecordDecl convertCtRecord(CtRecord rcrd) {
-		return new RecordDecl(
+		return factory.createRecord(
 			rcrd.getQualifiedName(),
 			convertSpoonVisibility(rcrd.getVisibility()),
 			convertSpoonNonAccessModifiers(rcrd.getModifiers()),
@@ -245,13 +268,12 @@ public class SpoonAPIFactory {
 			convertCtFields(rcrd),
 			convertCtMethods(rcrd),
 			createTypeReference(rcrd.getDeclaringType()),
-			convertCtConstructors(rcrd),
-			convertCtRecordComponents(rcrd)
+			convertCtConstructors(rcrd)
 		);
 	}
 
 	private FieldDecl convertCtField(CtField<?> field) {
-		return new FieldDecl(
+		return factory.createField(
 			makeQualifiedName(field),
 			convertSpoonVisibility(field.getVisibility()),
 			convertSpoonNonAccessModifiers(field.getModifiers()),
@@ -264,12 +286,12 @@ public class SpoonAPIFactory {
 
 	private MethodDecl convertCtMethod(CtMethod<?> method) {
 		// Spoon does not store 'default' information as modifier, but we do
-		EnumSet<Modifier> modifiers = Stream.concat(
+		Set<Modifier> modifiers = Stream.concat(
 			convertSpoonNonAccessModifiers(method.getModifiers()).stream(),
 			method.isDefaultMethod() ? Stream.of(Modifier.DEFAULT) : Stream.empty()
 		).collect(Collectors.toCollection(() -> EnumSet.noneOf(Modifier.class)));
 
-		return new MethodDecl(
+		return factory.createMethod(
 			makeQualifiedName(method),
 			convertSpoonVisibility(method.getVisibility()),
 			modifiers,
@@ -284,7 +306,7 @@ public class SpoonAPIFactory {
 	}
 
 	private AnnotationMethodDecl convertCtAnnotationMethod(CtAnnotationMethod<?> method) {
-		return new AnnotationMethodDecl(
+		return factory.createAnnotationMethod(
 			makeQualifiedName(method),
 			convertSpoonAnnotations(method.getAnnotations()),
 			convertSpoonPosition(method.getPosition(), method.getDeclaringType()),
@@ -295,7 +317,7 @@ public class SpoonAPIFactory {
 	}
 
 	private ConstructorDecl convertCtConstructor(CtConstructor<?> cons) {
-		return new ConstructorDecl(
+		return factory.createConstructor(
 			makeQualifiedName(cons),
 			convertSpoonVisibility(cons.getVisibility()),
 			convertSpoonNonAccessModifiers(cons.getModifiers()),
@@ -309,34 +331,34 @@ public class SpoonAPIFactory {
 		);
 	}
 
-	private List<FieldDecl> convertCtFields(CtType<?> type) {
+	private Set<FieldDecl> convertCtFields(CtType<?> type) {
 		return type.getFields().stream()
-			.filter(SpoonAPIFactory::isExported)
+			.filter(SpoonApiFactory::isExported)
 			.map(this::convertCtField)
-			.toList();
+			.collect(Collectors.toUnmodifiableSet());
 	}
 
-	private List<MethodDecl> convertCtMethods(CtType<?> type) {
+	private Set<MethodDecl> convertCtMethods(CtType<?> type) {
 		return type.getMethods().stream()
-			.filter(SpoonAPIFactory::isExported)
+			.filter(SpoonApiFactory::isExported)
 			.map(this::convertCtMethod)
-			.toList();
+			.collect(Collectors.toUnmodifiableSet());
 	}
 
-	private List<AnnotationMethodDecl> convertCtAnnotationMethods(CtAnnotationType<?> type) {
+	private Set<AnnotationMethodDecl> convertCtAnnotationMethods(CtAnnotationType<?> type) {
 		return type.getAnnotationMethods().stream()
 			.map(this::convertCtAnnotationMethod)
-			.toList();
+			.collect(Collectors.toUnmodifiableSet());
 	}
 
-	private List<ConstructorDecl> convertCtConstructors(CtClass<?> cls) {
+	private Set<ConstructorDecl> convertCtConstructors(CtClass<?> cls) {
 		// We need to keep track of default constructors in the API model.
 		// In such case, Spoon indeed returns an (implicit) constructor, but its visibility is null,
 		// so we need to handle it separately.
 		return cls.getConstructors().stream()
-			.filter(SpoonAPIFactory::isExported)
+			.filter(SpoonApiFactory::isExported)
 			.map(this::convertCtConstructor)
-			.toList();
+			.collect(Collectors.toUnmodifiableSet());
 	}
 
 	private List<FormalTypeParameter> convertCtFormalTypeParameters(CtFormalTypeDeclarer declarer) {
@@ -346,7 +368,7 @@ public class SpoonAPIFactory {
 	}
 
 	private FormalTypeParameter convertCtTypeParameter(CtTypeParameter parameter) {
-		return new FormalTypeParameter(
+		return factory.createFormalTypeParameter(
 			parameter.getSimpleName(),
 			convertCtTypeParameterBounds(parameter.getSuperclass() != null
 				// If there are no bounds, we make the bound to java.lang.Object explicit
@@ -361,7 +383,7 @@ public class SpoonAPIFactory {
 			case CtIntersectionTypeReference<?> intersection ->
 				intersection.getBounds().stream().map(this::createITypeReference).toList();
 			case CtTypeReference<?> reference -> List.of(createITypeReference(reference));
-			case null -> Collections.emptyList();
+			case null -> List.of();
 		};
 	}
 
@@ -374,47 +396,14 @@ public class SpoonAPIFactory {
 	private ParameterDecl convertCtParameter(CtParameter<?> parameter) {
 		// Spoon treats varargs as arrays, which is correct but not what we want to properly match signatures
 		return parameter.isVarArgs() && parameter.getType() instanceof CtArrayTypeReference<?> atr
-			? new ParameterDecl(parameter.getSimpleName(), createITypeReference(atr.getComponentType()), true)
-			: new ParameterDecl(parameter.getSimpleName(), createITypeReference(parameter.getType()), false);
+			? factory.createParameter(parameter.getSimpleName(), createITypeReference(atr.getComponentType()), true)
+			: factory.createParameter(parameter.getSimpleName(), createITypeReference(parameter.getType()), false);
 	}
 
-	private List<String> convertCtSealable(CtSealable sealable) {
+	private Set<TypeReference<TypeDecl>> convertCtSealable(CtSealable sealable) {
 		return sealable.getPermittedTypes().stream()
-			.map(CtTypeReference::getSimpleName)
-			.toList();
-	}
-
-	private List<RecordComponentDecl> convertCtRecordComponents(CtRecord rcrd) {
-		return rcrd.getRecordComponents().stream()
-			.map(rcrdCpt -> convertCtRecordComponent(rcrdCpt, rcrd))
-			.toList();
-	}
-
-	private RecordComponentDecl convertCtRecordComponent(CtRecordComponent rcrdCpt, CtRecord rcrd) {
-		return new RecordComponentDecl(
-			makeQualifiedName(rcrdCpt, rcrd),
-			convertSpoonAnnotations(rcrdCpt.getAnnotations()),
-			convertSpoonPosition(rcrdCpt.getPosition(), rcrd),
-			createTypeReference(rcrd),
-			createITypeReference(rcrdCpt.getType()),
-			false
-		);
-	}
-
-	private List<EnumValueDecl> convertCtEnumValues(CtEnum<?> enm) {
-		return enm.getEnumValues().stream()
-			.map(this::convertCtEnumValue)
-			.toList();
-	}
-
-	private EnumValueDecl convertCtEnumValue(CtEnumValue<?> enmVal) {
-		return new EnumValueDecl(
-			makeQualifiedName(enmVal),
-			convertSpoonAnnotations(enmVal.getAnnotations()),
-			convertSpoonPosition(enmVal.getPosition(), enmVal.getDeclaringType()),
-			createTypeReference(enmVal.getDeclaringType()),
-			createITypeReference(enmVal.getType())
-		);
+			.map(this::createTypeReference)
+			.collect(Collectors.toUnmodifiableSet());
 	}
 
 	private AccessModifier convertSpoonVisibility(ModifierKind visibility) {
@@ -423,7 +412,7 @@ public class SpoonAPIFactory {
 			case PRIVATE -> AccessModifier.PRIVATE;
 			case PROTECTED -> AccessModifier.PROTECTED;
 			case null -> AccessModifier.PACKAGE_PRIVATE;
-			default -> throw new IllegalArgumentException("Unknown visibility " + visibility);
+			default -> throw new RoseauException("Unexpected visibility " + visibility);
 		};
 	}
 
@@ -439,25 +428,65 @@ public class SpoonAPIFactory {
 			case NON_SEALED -> Modifier.NON_SEALED;
 			case NATIVE -> Modifier.NATIVE;
 			case STRICTFP -> Modifier.STRICTFP;
-			default -> throw new IllegalArgumentException("Unknown modifier " + modifier);
+			default -> throw new RoseauException("Unexpected modifier " + modifier);
 		};
 	}
 
-	private static EnumSet<Modifier> convertSpoonNonAccessModifiers(Collection<ModifierKind> modifiers) {
+	private static Set<Modifier> convertSpoonNonAccessModifiers(Collection<ModifierKind> modifiers) {
 		return modifiers.stream()
 			.filter(mod -> !Set.of(ModifierKind.PUBLIC, ModifierKind.PROTECTED, ModifierKind.PRIVATE).contains(mod))
-			.map(SpoonAPIFactory::convertSpoonModifier)
+			.map(SpoonApiFactory::convertSpoonModifier)
 			.collect(Collectors.toCollection(() -> EnumSet.noneOf(Modifier.class)));
 	}
 
-	private List<Annotation> convertSpoonAnnotations(List<CtAnnotation<?>> annotations) {
+	private Set<Annotation> convertSpoonAnnotations(List<CtAnnotation<?>> annotations) {
 		return annotations.stream()
+			.filter(ann -> !isSourceAnnotation(ann))
 			.map(this::convertSpoonAnnotation)
-			.toList();
+			.collect(Collectors.toUnmodifiableSet());
+	}
+
+	private boolean isSourceAnnotation(CtAnnotation<?> annotation) {
+		CtType<?> type = annotation.getAnnotationType().getTypeDeclaration();
+		if (type != null) {
+			CtAnnotation<?> retention = type.getAnnotation(
+				typeFactory.createReference(Retention.class.getCanonicalName()));
+			if (retention != null) {
+				CtExpression<?> value = retention.getValue("value");
+				if (value instanceof CtFieldRead<?> fieldRead) {
+					return fieldRead.getVariable().getSimpleName().equals("SOURCE");
+				}
+			}
+		}
+
+		return false;
 	}
 
 	private Annotation convertSpoonAnnotation(CtAnnotation<?> annotation) {
-		return new Annotation(createTypeReference(annotation.getAnnotationType()));
+		Map<String, String> values = annotation.getValues().entrySet().stream()
+			.filter(e -> e.getValue() != null)
+			.collect(Collectors.toMap(
+				Map.Entry::getKey, e -> extractAnnotationValue(e.getValue())
+			));
+		return factory.createAnnotation(createTypeReference(annotation.getAnnotationType()), values);
+	}
+
+	private String extractAnnotationValue(Object value) {
+		return switch (value) {
+			case CtLiteral<?> literal -> {
+				Object lit = literal.getValue();
+				yield Optional.ofNullable(lit).map(Object::toString).orElse("null");
+			}
+			case CtFieldRead<?> field -> {
+				CtFieldReference<?> variable = field.getVariable();
+				if (Class.class.getCanonicalName().equals(variable.getType().getQualifiedName())) {
+					yield variable.getDeclaringType().getQualifiedName();
+				}
+				yield variable.getDeclaringType().getQualifiedName() + "." + variable.getSimpleName();
+			}
+			case CtNewArray<?> ignored -> "{}";
+			default -> value.toString();
+		};
 	}
 
 	private Set<ElementType> convertAnnotationTargets(CtAnnotationType<?> annotation) {
@@ -466,12 +495,12 @@ public class SpoonAPIFactory {
 		if (target != null) {
 			Object value = target.getValue("value");
 
-			if (value instanceof CtNewArray array) {
-				List<CtExpression<?>> elems = (List<CtExpression<?>>) array.getElements();
+			if (value instanceof CtNewArray<?> array) {
+				List<CtExpression<?>> elems = array.getElements();
 				return elems.stream()
 					.map(CtFieldRead.class::cast)
 					.map(fieldRead -> ElementType.valueOf(fieldRead.getVariable().getSimpleName()))
-					.collect(Collectors.toSet());
+					.collect(Collectors.toUnmodifiableSet());
 			} else if (value instanceof CtFieldRead<?> fieldRead) {
 				return Set.of(ElementType.valueOf(fieldRead.getVariable().getSimpleName()));
 			}
@@ -484,19 +513,19 @@ public class SpoonAPIFactory {
 	 * If the provided position isn't valid, fallback to the other element's file. e.g., an implicit constructor will
 	 * point to the file it's contained in.
 	 */
-	private static SourceLocation convertSpoonPosition(SourcePosition position, CtElement fallback) {
+	private SourceLocation convertSpoonPosition(SourcePosition position, CtElement fallback) {
 		if (position.isValidPosition()) {
-			return new SourceLocation(
-				position.getFile() != null ? position.getFile().toPath() : null,
+			return factory.location(
+				position.getFile() != null ? basePath.relativize(position.getFile().toPath()) : null,
 				position.getLine());
 		} else if (fallback != null && fallback.getPosition() != null) {
 			SourcePosition fallbackPosition = fallback.getPosition();
 			if (fallbackPosition.isValidPosition() && fallbackPosition.getFile() != null) {
-				return new SourceLocation(fallback.getPosition().getFile().toPath(), -1);
+				return factory.location(basePath.relativize(fallbackPosition.getFile().toPath()), -1);
 			}
 		}
 
-		return SourceLocation.NO_LOCATION;
+		return factory.unknownLocation();
 	}
 
 	private static boolean isExported(CtTypeMember member) {
@@ -508,7 +537,7 @@ public class SpoonAPIFactory {
 		 * So we have to keep A's potentially-leaked declarations to mark them later as part of B's API.
 		 * It's possible to re-open and leak a type within the API if:
 		 *   - It has a non-private constructor (package-private can be re-opened within the same package)
-		 *   - It is not explicitly 'final' or 'sealed' (sealed subclasses can attempt to leak but they're final
+		 *   - It is not explicitly 'final' or 'sealed' (sealed subclasses can attempt to leak, but they're final
 		 *    themselves so they won't leak to clients)
 		 *
 		 * class A { // package 'pkg'
@@ -522,7 +551,7 @@ public class SpoonAPIFactory {
 
 	/**
 	 * Checks whether the given type is effectively final _within the API_. While package-private constructors cannot be
-	 * accessed from client code, they can be from the API itself, and sub-classes can leak internals.
+	 * accessed from client code, they can be from the API itself, and subclasses can leak internals.
 	 */
 	private static boolean isEffectivelyFinal(CtType<?> type) {
 		if (type instanceof CtClass<?> cls &&
